Bug 49750 - Search Bar history is always empty
Summary: Search Bar history is always empty
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.5 release
Hardware: Other All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:3.7.0 target:3.6.1
Keywords:
: 47631 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-05-10 12:11 UTC by Böröczky Csaba
Modified: 2012-12-26 11:08 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
History doesn't vanish by closing (4.28 KB, patch)
2012-08-08 19:18 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Böröczky Csaba 2012-05-10 12:11:22 UTC
Problem description: 

Steps to reproduce:
1. Type words example "Ctrl + f keresés nem működik"
2. You should explicitly select any of the words, example "nem"
3. The search box appears in the lower left corner and the selected text is not included. 
First problem: I searched in the search window for several minutes while the left-hand corner has been found.
Second: Selected text no in search box
Thrid: The list is empty after repeated search
Comment 1 Miklos Vajna 2012-05-14 01:00:04 UTC
Confirmed, I think the second problem is indeed annoying, will fix in a bit.
Comment 2 Not Assigned 2012-05-14 01:08:43 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2b92546ee3aa3d56f64c68ff3e8e782b3c56dba4

fdo#49750 findbar: try to fill empty textfield with selected text
Comment 3 Andras Timar 2012-08-07 08:24:53 UTC
1st problem (it is hard to find the Search bar) is invalid. Search bars are getting popular in other applications, too. For example in Firefox.

2nd problem (selected text in Search box) has been partially resolved by Miklos. In fact it is a duplicate of bug 37791, I'll comment it there. 

3rd problem (history is empty) - well, I'm afraid that it is not implemented. Let's convert this bug to deal with this problem only.
Comment 4 Tamás Zolnai 2012-08-08 19:18:03 UTC
Created attachment 65309 [details]
History doesn't vanish by closing

Until now, only the ToolBar's TextField stored the history, but
this is destructed when ToolBar is closed. The "Manager" class is alive
in case of Toolbar's invisibility, so I made this class to store history
temporarly.
Comment 5 Not Assigned 2012-08-09 07:37:46 UTC
Zolnai Tamas committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0d2abfdbd4a8f8ea1a46fcfd84270e30e45f967c

fdo#49750 Search Toolbar keeps its history
Comment 6 Miklos Vajna 2012-08-09 07:42:43 UTC
Resolved in master, closing.
Comment 7 Not Assigned 2012-08-10 19:56:06 UTC
Zolnai Tamas committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=35b6007b7f62b75a3e6ec924fa5863cd6e7a53e0&g=libreoffice-3-6

fdo#49750 Search Toolbar keeps its history


It will be available in LibreOffice 3.6.1.
Comment 8 royerjy 2012-12-16 18:49:55 UTC
Verified on XP SP3 4.0.0.beta1. List of search is populated with words used in session.
Comment 9 Tamás Zolnai 2012-12-26 11:08:47 UTC
*** Bug 47631 has been marked as a duplicate of this bug. ***