fdo#49750 findbar: try to fill empty textfield with selected text

Change-Id: I583bb91e7fc325557abcc0756506133112da895c